--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "emailjs-com": "^2.6.3",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "mongoose": "^5.10.0",
